--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section id="about" class="tab-content active">
             <h2>About Us</h2>
-            <p>We are a forward-thinking startup dedicated to delivering innovative digital solutions that help your business thrive in a connected world.</p>
+            <p>We are a forward-thinking startup.</p>
         </section>
 
         <section id="services" class="tab-content">
