font and images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>nJoy24</title>
+    <!-- POPIS STRANKY -->
+    <meta name="description" content="POPIS">
+
+
+    <!-- Standard favicon for browser tabs -->
+    <link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
+
+    <!-- High-res icons for Android/Chrome/Windows -->
+    <link rel="icon" type="image/png" sizes="192x192" href="images/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="images/icons/android-chrome-512x512.png">
+
+    <!-- Apple Touch Icon for iOS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png">
+
+    <!-- .ico favicon for legacy browsers -->
+    <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="images/icons/favicon.ico">
+
+    <!-- Default fallback favicon -->
+    <link rel="icon" type="image/png" href="images/icons/favicon-32x32.png">
+
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Inter:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -33,6 +57,9 @@
         <section id="about" class="tab-content active">
             <h2>About Us</h2>
             <p>At the forefront of technological advancement, our company leverages cutting-edge platforms and scalable architectures to deliver seamless integration and unparalleled efficiency. By harnessing next-generation frameworks and agile methodologies, we empower enterprises to unlock new dimensions of productivity and innovation.</p>
+            <p>Harnessing the power of artificial intelligence and machine learning, our solutions enable predictive analytics and intelligent automation, redefining industry standards. We prioritize robust cybersecurity measures and compliance frameworks to safeguard critical assets in an increasingly interconnected landscape.</p>
+            <img src="images/laptop.jpg">
+            <img src="images/paper.jpg">
         </section>
 
         <section id="services" class="tab-content">
