translations and colors

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>nJoy24</title>
+
     <!-- POPIS STRANKY -->
     <meta name="description" content="POPIS">
-
 
     <!-- Standard favicon for browser tabs -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
@@ -37,7 +37,7 @@
             <div class="lang-switch-wrapper">
                 <label for="lang-switch" class="lang-label">
                     <svg class="lang-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm0 2c1.657 0 3.156.672 4.242 1.758A5.978 5.978 0 0 1 20 12c0 1.657-.672 3.156-1.758 4.242A5.978 5.978 0 0 1 12 20a5.978 5.978 0 0 1-4.242-1.758A5.978 5.978 0 0 1 4 12c0-1.657.672-3.156 1.758-4.242A5.978 5.978 0 0 1 12 4zm0 2a4 4 0 0 0-4 4h2a2 2 0 1 1 4 0h2a4 4 0 0 0-4-4zm0 12a4 4 0 0 0 4-4h-2a2 2 0 1 1-4 0H8a4 4 0 0 0 4 4z"/></svg>
-                    <span>Language:</span>
+                    <span class="lang-label-text">Language:</span>
                 </label>
                 <select id="lang-switch" class="lang-switch">
                     <option value="en">English</option>
@@ -56,8 +56,15 @@
     <main>
         <section id="about" class="tab-content active">
             <h2>About Us</h2>
-            <p>At the forefront of technological advancement, our company leverages cutting-edge platforms and scalable architectures to deliver seamless integration and unparalleled efficiency. By harnessing next-generation frameworks and agile methodologies, we empower enterprises to unlock new dimensions of productivity and innovation.</p>
-            <p>Harnessing the power of artificial intelligence and machine learning, our solutions enable predictive analytics and intelligent automation, redefining industry standards. We prioritize robust cybersecurity measures and compliance frameworks to safeguard critical assets in an increasingly interconnected landscape.</p>
+            <p>At the forefront of technological advancement, our company leverages cutting-edge
+                platforms and scalable architectures to deliver seamless integration and
+                unparalleled efficiency. By harnessing next-generation frameworks and agile
+                methodologies, we empower enterprises to unlock new dimensions of productivity
+                and innovation.<br><br>Harnessing the power of artificial intelligence and machine
+                learning, our solutions enable predictive analytics and intelligent automation,
+                redefining industry standards. We prioritize robust cybersecurity measures and
+                compliance frameworks to safeguard critical assets in an increasingly
+                interconnected landscape.</p>
             <img src="images/laptop.jpg">
             <img src="images/paper.jpg">
         </section>
