--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>nJoy24</title>
+    <title>Njoy24</title>
 
     <!-- POPIS STRANKY -->
-    <meta name="description" content="POPIS">
+    <meta name="description" content="Njoy24">
 
     <!-- Standard favicon for browser tabs -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
@@ -32,8 +32,8 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>nJoy24</h1>
-            <p class="subtitle">Empowering Your Digital Experience</p>
+            <h1>Njoy24</h1>
+            <p class="subtitle">Engage. Optimize. Grow.</p>
             <div class="lang-switch-wrapper">
                 <label for="lang-switch" class="lang-label">
                     <svg class="lang-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm0 2c1.657 0 3.156.672 4.242 1.758A5.978 5.978 0 0 1 20 12c0 1.657-.672 3.156-1.758 4.242A5.978 5.978 0 0 1 12 20a5.978 5.978 0 0 1-4.242-1.758A5.978 5.978 0 0 1 4 12c0-1.657.672-3.156 1.758-4.242A5.978 5.978 0 0 1 12 4zm0 2a4 4 0 0 0-4 4h2a2 2 0 1 1 4 0h2a4 4 0 0 0-4-4zm0 12a4 4 0 0 0 4-4h-2a2 2 0 1 1-4 0H8a4 4 0 0 0 4 4z"/></svg>
@@ -56,6 +56,11 @@
     <main>
         <section id="about" class="tab-content active">
             <h2>About Us</h2>
+            <section id="video">
+                <div class="video-wrapper" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/knLADhSRgU8?si=dgNuQt4RbTydeo-Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </section>
             <p>At the forefront of technological advancement, our company leverages cutting-edge
                 platforms and scalable architectures to deliver seamless integration and
                 unparalleled efficiency. By harnessing next-generation frameworks and agile
@@ -80,28 +85,28 @@
         </section>
 
         <section id="contact" class="tab-content">
-    <h2>Contact</h2>
-    <p>Have questions or want to work with us?</p>
-    <ul class="contact-list">
-        <li>
-            <strong>Email:</strong>
-            <a href="mailto:example@gmail.com">example@gmail.com</a>
-        </li>
-        <li>
-            <strong>Email 2:</strong>
-            <a href="mailto:example2@gmail.com">example2@gmail.com</a>
-        </li>
-        <li>
-            <strong>Phone:</strong>
-            <a href="tel:+421275896322">+421 275 896 322</a>
-        </li>
-    </ul>
-</section>
+            <h2>Contact</h2>
+            <p>Have questions or want to work with us?</p>
+            <ul class="contact-list">
+                <li>
+                    <strong>Email:</strong>
+                    <a href="mailto:example@gmail.com">example@gmail.com</a>
+                </li>
+                <li>
+                    <strong>Email 2:</strong>
+                    <a href="mailto:example2@gmail.com">example2@gmail.com</a>
+                </li>
+                <li>
+                    <strong>Phone:</strong>
+                    <a href="tel:+421275896322">+421 275 896 322</a>
+                </li>
+            </ul>
+        </section>
     </main>
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2025 nJoy24 &mdash; All rights reserved.</p>
+            <p>&copy; 2025 Njoy24 &mdash; All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
