Logo added, icons change

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>Njoy24</h1>
-            <p class="subtitle">Engage. Optimize. Grow.</p>
+            <div class="logo-slogan-row">
+                <img src="images/logo_transparent.png" alt="Njoy24 Logo" class="site-logo">
+                <p class="subtitle">Engage. Optimize. Grow.</p>
+            </div>
             <div class="lang-switch-wrapper">
                 <label for="lang-switch" class="lang-label">
                     <svg class="lang-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm0 2c1.657 0 3.156.672 4.242 1.758A5.978 5.978 0 0 1 20 12c0 1.657-.672 3.156-1.758 4.242A5.978 5.978 0 0 1 12 20a5.978 5.978 0 0 1-4.242-1.758A5.978 5.978 0 0 1 4 12c0-1.657.672-3.156 1.758-4.242A5.978 5.978 0 0 1 12 4zm0 2a4 4 0 0 0-4 4h2a2 2 0 1 1 4 0h2a4 4 0 0 0-4-4zm0 12a4 4 0 0 0 4-4h-2a2 2 0 1 1-4 0H8a4 4 0 0 0 4 4z"/></svg>
