Logo change, pattern added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="logo-slogan-row">
+            <div class="logo-slogan-col">
                 <img src="images/logo_transparent.png" alt="Njoy24 Logo" class="site-logo">
                 <p class="subtitle">Engage. Optimize. Grow.</p>
             </div>
@@ -56,25 +56,47 @@
     </nav>
 
     <main>
-        <section id="about" class="tab-content active">
-            <h2>About Us</h2>
-            <section id="video">
-                <div class="video-wrapper" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/knLADhSRgU8?si=dgNuQt4RbTydeo-Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
-            </section>
-            <p>At the forefront of technological advancement, our company leverages cutting-edge
-                platforms and scalable architectures to deliver seamless integration and
-                unparalleled efficiency. By harnessing next-generation frameworks and agile
-                methodologies, we empower enterprises to unlock new dimensions of productivity
-                and innovation.<br><br>Harnessing the power of artificial intelligence and machine
-                learning, our solutions enable predictive analytics and intelligent automation,
-                redefining industry standards. We prioritize robust cybersecurity measures and
-                compliance frameworks to safeguard critical assets in an increasingly
-                interconnected landscape.</p>
-            <img src="images/laptop.jpg">
-            <img src="images/paper.jpg">
+    <section id="about" class="tab-content active">
+        <h2>The future of sales is here</h2>
+        <div class="about-lead">
+            <p>
+                <strong>With a new generation of smart vending machines.</strong>
+            </p>
+        </div>
+        <div class="about-features">
+            <p>
+                Discover a vending machine that does more than just sell.<br>
+                Thanks to advanced technology, you will increase sales, reduce costs and gain a new channel for targeted digital advertising.
+            </p>
+            <ul>
+                <li>Increase sales</li>
+                <li>Reduce costs</li>
+                <li>Targeted digital advertising</li>
+                <li>Fast, intuitive and modern shopping – anytime, anywhere</li>
+            </ul>
+        </div>
+        <div class="about-quality">
+            <p>
+                <em>Designed with an emphasis on quality, efficiency and sustainability.</em>
+            </p>
+            <p>
+                These automated devices were developed based on the real needs of customers.<br>
+                The result? A reliable solution that meets the highest technical and environmental standards while looking elegant and professional in any environment.
+            </p>
+        </div>
+        <div class="about-summary">
+            <p>
+                <strong>Get more out of your space...</strong>
+            </p>
+        </div>
+        <section id="video">
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/knLADhSRgU8?si=dgNuQt4RbTydeo-Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
+        <img src="images/laptop.jpg" alt="Laptop">
+        <img src="images/paper.jpg" alt="Paper">
+    </section>
 
         <section id="services" class="tab-content">
             <h2>What We Offer</h2>
