--- a/index.html
+++ b/index.html
@@ -59,33 +59,27 @@
     <section id="about" class="tab-content active">
         <h2>The future of sales is here</h2>
         <div class="about-lead">
-            <p>
+            <p id="about-lead">
                 <strong>With a new generation of smart vending machines.</strong>
             </p>
         </div>
         <div class="about-features">
-            <p>
+            <p id="about-features">
                 Discover a vending machine that does more than just sell.<br>
-                Thanks to advanced technology, you will increase sales, reduce costs and gain a new channel for targeted digital advertising.
+                Thanks to advanced technology, you will increase sales, reduce costs and gain a new channel for targeted digital advertising. Your customers get a fast, intuitive and modern way to shop – anytime, anywhere.
             </p>
-            <ul>
-                <li>Increase sales</li>
-                <li>Reduce costs</li>
-                <li>Targeted digital advertising</li>
-                <li>Fast, intuitive and modern shopping – anytime, anywhere</li>
-            </ul>
         </div>
         <div class="about-quality">
-            <p>
+            <p id="about-quality">
                 <em>Designed with an emphasis on quality, efficiency and sustainability.</em>
             </p>
-            <p>
+            <p id="about-quality2">
                 These automated devices were developed based on the real needs of customers.<br>
                 The result? A reliable solution that meets the highest technical and environmental standards while looking elegant and professional in any environment.
             </p>
         </div>
         <div class="about-summary">
-            <p>
+            <p id="about-summary">
                 <strong>Get more out of your space...</strong>
             </p>
         </div>
@@ -94,8 +88,6 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/knLADhSRgU8?si=dgNuQt4RbTydeo-Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
-        <img src="images/laptop.jpg" alt="Laptop">
-        <img src="images/paper.jpg" alt="Paper">
     </section>
 
         <section id="services" class="tab-content">
@@ -106,6 +98,8 @@
                 <li>Cloud Integration</li>
                 <li>Consulting &amp; Support</li>
             </ul>
+            <img src="images/laptop.jpg" alt="Laptop">
+            <img src="images/paper.jpg" alt="Paper">
         </section>
 
         <section id="contact" class="tab-content">
@@ -121,7 +115,7 @@
                     <a href="mailto:example2@gmail.com">example2@gmail.com</a>
                 </li>
                 <li>
-                    <strong>Phone:</strong>
+                    <strong phone-label>Phone:</strong>
                     <a href="tel:+421275896322">+421 275 896 322</a>
                 </li>
             </ul>
